--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "convex": "^1.28.2",
     "next": "15.2.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "svix": "^1.81.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
