--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@clerk/nextjs": "^6.34.5",
     "convex": "^1.28.2",
+    "lucide-react": "^0.553.0",
     "next": "15.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
