--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.34.5",
+    "@monaco-editor/react": "^4.7.0",
     "convex": "^1.28.2",
     "lucide-react": "^0.553.0",
     "next": "15.2.3",
