--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "next": "15.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "svix": "^1.81.0"
+    "svix": "^1.81.0",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
