--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.34.5",
-    "@monaco-editor/react": "^4.7.0",
+    "@monaco-editor/react": "4.6.0",
     "convex": "^1.28.2",
+    "framer-motion": "^12.23.24",
     "lucide-react": "^0.553.0",
+    "motion": "^12.23.24",
     "next": "15.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
