--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "15.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.6.0",
     "svix": "^1.81.0",
     "zustand": "^5.0.8"
   },
